<resources>
    <string name="app_name">Saikou</string>
    <string name="slogan">The Best Anime &amp; Manga app for Android.</string>
    <string name="login">Login with Anilist</string>

    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>

    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>

    <string name="sad">X(</string>
    <string name="oh">:o</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>

    <string name="username">Username</string>
    <string name="chapters_read">Chapters Read : </string>
    <string name="episodes_watched">Episodes Watched : </string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>

    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
</resources>