<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <me.ibrahimsn.particle.ParticleView
        android:id="@+id/particleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:particleCount="60"
        app:particleMinRadius="3"
        app:particleMaxRadius="10"
        app:particlesBackgroundColor="@color/bg"
        app:particleColor="@color/violet_400"
        app:particleLineColor="@color/violet_700"
        app:particleLinesEnabled="true"
        tools:backgroundTint="@color/bg" />

    <TextView
        android:id="@+id/noInternetSad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sad"
        android:textColor="@color/pink_500"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noInternetSad" />

    <FrameLayout
        android:id="@+id/refreshButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

