<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/fragment_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp">

            <ProgressBar
                android:id="@+id/homeUserDataProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:indeterminate="true" />

            <LinearLayout
                android:id="@+id/homeUserDataContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/homeUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.58"
                            android:fontFamily="@font/poppins"
                            android:text="@string/episodes_watched"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/homeEpisodesWatched"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="@color/violet_400"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.58"
                            android:fontFamily="@font/poppins"
                            android:text="@string/chapters_read"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/homeChaptersRead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="@color/violet_400"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_round_settings_24"
                    tools:ignore="ContentDescription" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/bg_black"
                    app:cardCornerRadius="32dp">

                    <ImageView
                        android:id="@+id/homeUserAvatar"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription,ImageContrastCheck"
                        tools:src="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/homeAnimeList"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/homeAnimeListImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@color/bg_opp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/anime_list"
                        android:textAllCaps="true"
                        android:textColor="@color/bg"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="64dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="?attr/colorPrimary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/homeMangaList"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/homeMangaListImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:background="@color/bg_opp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/manga_list"
                        android:textAllCaps="true"
                        android:textColor="@color/bg"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="64dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="?attr/colorPrimary" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:padding="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/continue_watching"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/homeWatchingProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="90dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homeWatchingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="4"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_compact"
                    tools:orientation="horizontal" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/continue_reading"
                android:padding="8dp"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/homeReadingProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="90dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homeReadingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="4"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_compact"
                    tools:orientation="horizontal" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>